--- a/red_wine_quality/requirements.txt
+++ b/red_wine_quality/requirements.txt
@@ -2,12 +2,19 @@ streamlit
 scikit-learn
 xgboost
 lightgbm
-catboost
+# catboost
 pandas
 numpy
 matplotlib
 seaborn
 plotly
 scipy
-tensorflow
-keras
+# tensorflow
+# keras
+flask
+flask-cors
+joblib
+pyYAML
+notebook
+python-box==6.0.2
+types-pyYAML
